# qdctl

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile
scripts/: backup-to-s3.sh  remove-old-backups.sh
src/: avro_schema.rs  backup.rs  main.rs  restore.rs
