[package]
name = "qdctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qdctl"
path = "src/main.rs"

[dependencies]
qdrant-client = "1.17"
apache-avro = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
